--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.StudyPlannerNew"
         tools:targetApi="31">
         <activity
+            android:name=".AboutUsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StudentHomeActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".StudyScheduleActivity"
+            android:exported="false" />
+        <activity
             android:name=".UniversityDetailsActivity"
             android:exported="false" />
         <activity
@@ -20,9 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".MyTaskActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".AddTaskActivity"
             android:exported="false" />
@@ -42,7 +49,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
